# AgentOrb

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: release.yml
apps/agent-orb-ui/: DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/agent-orb-ui/src/: api.ts  main.ts  orb.ts  style.css  types.ts
apps/agent-orb-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-orb-ui/src-tauri/capabilities/: default.json
apps/agent-orb-ui/src-tauri/src/: main.rs
crates/agent-orb-cli/: Cargo.toml  DESIGN.md  README.md
crates/agent-orb-cli/src/: config.rs  daemon.rs  error.rs  event.rs  hook.rs  http.rs  launcher.rs  main.rs  prompt.rs  runner.rs  shell.rs  source.rs
crates/agent-orb-core/: Cargo.toml  DESIGN.md  README.md
crates/agent-orb-core/src/: config.rs  event.rs  lib.rs  source.rs  state_machine.rs  status.rs  visual.rs
crates/agent-orb-daemon/: Cargo.toml  DESIGN.md  README.md
crates/agent-orb-daemon/src/: api.rs  main.rs  security.rs  session_store.rs
docs/: AGENT_ORB_MVP.md  AGENT_ORB_MVP_DEV_PLAN.md  RELEASE.md
examples/: config.toml
examples/events/: output-received.json  process-exited.json  session-started.json
scripts/: smoke-real-adapters.sh
scripts/release/: package-runtime.sh  smoke-npx-local.sh
scripts/windows/: README.md  bootstrap-rust.ps1  install-agent-orb.ps1  smoke-agent-orb.ps1  smoke-real-adapters.ps1
