[workspace]
members = [
  "crates/agent-orb-core",
  "crates/agent-orb-cli",
  "crates/agent-orb-daemon"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.11"
license = "MIT"

[workspace.dependencies]
agent-orb-core = { path = "crates/agent-orb-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
portable-pty = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
