[package]
name = "agent-orb-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent_orbd"
path = "src/main.rs"

[dependencies]
agent-orb-core.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
