[package]
name = "agent-orb-ui"
version = "0.1.17"
edition = "2021"
license = "MIT"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-orb-core = { path = "../../../crates/agent-orb-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["io-util", "net"] }

[workspace]
